--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,32 +2,45 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.wei.pl2303_test">
 
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
+
+    <uses-feature
+        android:name="android.hardware.usb.host"
+        android:required="false" />
+
+    <uses-permission android:name="android.hardware.usb.host" />
+    <uses-permission android:name="ANDROID.PERMISSION.HARDWARE_TEST" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.wei.usb_demo.MainActivity">
+        <activity android:name="com.example.wei.usb_demo.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.example.wei.usb_demo.WriteDeviceActivity"></activity>
-        <activity android:name="com.example.wei.usb_demo.BloodOxygenLineActivity"></activity>
-        <receiver android:name="com.example.wei.usb_demo.PL2303Handle">
+        <activity android:name="com.example.wei.usb_demo.activity.WriteDeviceActivity" />
+        <activity android:name="com.example.wei.usb_demo.activity.BloodOxygenLineActivity" />
+
+        <receiver android:name="com.example.wei.usb_demo.usb_device.UsbHandle">
             <intent-filter android:priority="1000">
-                <action android:name = "android.provider.Telephony.SMS_RECEIVED" />
+                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
             </intent-filter>
         </receiver>
+
+        <activity android:name="com.example.wei.usb_demo.activity.BloodPressureActivity"></activity>
+        <activity android:name="com.example.wei.usb_demo.activity.BloodRecordActivity"></activity>
+        <activity android:name="com.example.wei.usb_demo.activity.RealtimeActivity"></activity>
+        <activity android:name="com.example.wei.usb_demo.activity.DialogActivity"
+            android:theme="@style/dialogstyle">
+
+        </activity>
     </application>
 
-    <uses-permission android:name = "android.permission.RECEIVE_SMS" />
-    <uses-permission android:name = "android.permission.SEND_SMS" />
-
-    <uses-feature android:name="android.hardware.usb.host" android:required="false" />
-    <uses-permission android:name="android.hardware.usb.host" />
-    <uses-permission android:name="ANDROID.PERMISSION.HARDWARE_TEST" />
 </manifest>
