--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,13 +34,14 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name="com.example.wei.usb_demo.activity.BloodPressureActivity"></activity>
-        <activity android:name="com.example.wei.usb_demo.activity.BloodRecordActivity"></activity>
-        <activity android:name="com.example.wei.usb_demo.activity.RealtimeActivity"></activity>
-        <activity android:name="com.example.wei.usb_demo.activity.DialogActivity"
-            android:theme="@style/dialogstyle">
-
-        </activity>
+        <activity android:name="com.example.wei.usb_demo.activity.BloodPressureActivity" />
+        <activity android:name="com.example.wei.usb_demo.activity.BloodRecordActivity" />
+        <activity android:name="com.example.wei.usb_demo.activity.RealtimeActivity" />
+        <activity
+            android:name="com.example.wei.usb_demo.activity.DialogActivity"
+            android:theme="@style/dialogstyle" />
+        <activity android:name="com.example.wei.usb_demo.activity.ReadCardActivity" />
+        <activity android:name="com.example.wei.usb_demo.activity.PrinterActivity"></activity>
     </application>
 
 </manifest>
