--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,11 +46,7 @@
 
         <service android:name="com.example.wei.usb_demo.utils.printer_utils.myprinter.WorkService" />
 
-        <activity android:name="com.example.wei.usb_demo.activity.HeartRateActivity"></activity><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
-     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
+        <activity android:name="com.example.wei.usb_demo.activity.HeartRateActivity"></activity>
     </application>
 
 </manifest>
