--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "com.example.wei.pl2303_test"
+        applicationId "com.mdm"
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
