--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,20 +1,34 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
     defaultConfig {
         applicationId "com.mdm"
-        minSdkVersion 15
-        targetSdkVersion 25
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.minSdkVersion
+
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
+
         manifestPlaceholders = [server_mode: "release"]
+
         ndk {
             abiFilters 'armeabi','armeabi-v7a'
         }
     }
+
+
+    lintOptions {
+        abortOnError = false
+    }
+
+    dexOptions {
+        javaMaxHeapSize "4g"
+        jumboMode = true
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -31,12 +45,9 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
     compile 'com.android.support:appcompat-v7:25.0.0'
-    testCompile 'junit:junit:4.12'
-    compile project(path: ':hellocharts-library')
     compile files('libs/huadaUSBLib.jar')
     compile project(path: ':volley')
+    compile project(path: ':hellocharts-library')
+    compile "com.android.support:multidex:${rootProject.ext.multidex}"
 }
