--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ ext {
     minSdkVersion = 15
     targetSdkVersion = 24
     compileSdkVersion = 24
-    buildToolsVersion = '24.0.1'
+    buildToolsVersion = '25.0.2'
+
+    // App dependencies
     multidex = '1.0.0'
 }
