血氧历史记录和记录查看

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,9 @@
         android:theme="@style/AppTheme">
         <activity
             android:name="com.example.wei.usb_demo.activity.MainActivity"
-            android:configChanges="orientation|screenSize|keyboardHidden">
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:launchMode="singleTask"
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -72,10 +74,23 @@
 
         <activity
             android:name="com.example.wei.usb_demo.activity.HeartRateActivity"
-            android:configChanges="orientation|screenSize|keyboardHidden"></activity>
+            android:configChanges="orientation|screenSize|keyboardHidden"/>
+
         <activity
             android:name="com.example.wei.usb_demo.activity.EcgDataSourceReviewActivity"
-            android:configChanges="orientation|screenSize|keyboardHidden"></activity>
+            android:configChanges="orientation|screenSize|keyboardHidden"/>
+
+        <activity
+            android:name="com.example.wei.usb_demo.activity.BloodOxygenHistoryActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"/>
+
+        <activity
+            android:name="com.example.wei.usb_demo.activity.EcgHistoryActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"/>
+
+        <activity
+            android:name="com.example.wei.usb_demo.activity.Spo2hDataSourceReviewActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"/>
 
         <provider
             android:name="com.example.wei.usb_demo.common.database.provider.DnurseProvider"
